# buff

./: .gitattributes  .gitignore  Makefile  README.md  cli.py  config.py  main.py  pyproject.toml
.config/: .env.template
alembic/: env.py
alembic/versions/: 7b54cec44ab6_create_works_and_work_chunks_tables.py  82f1ac62f43f_create_work_citations_and_work_.py
buff/: __init__.py  openalex.py  openalex_wrapper.py  schemas.py  secrets.py  supabase.py  unpaywall.py  utils.py
buff/llm/: __init__.py  client.py  embed.py  models.py  split.py  utils.py
buff/llm/agents/: __init__.py  analyze.py  search.py  summarize.py
buff/llm/agents/research/: __init__.py  breakdown.py  planner.py  research.py
buff/llm/skills/: __init__.py  analyze.py  search.py  summarize.py  writer.py
buff/network/: __init__.py  data.py  download.py
buff/openalex/: __init__.py  config.py  download.py  errors.py  models.py  search.py  utils.py  work.py
buff/store/: __init__.py  mongo.py  redis.py  sql.py  vector.py
data/: demo.json  no_oa.txt  oa.txt  sanitized_names.csv  works.json
notebooks/: Citation Embedding Analysis.ipynb  chunks.json  combined_chunks.json  combined_embeddings.json  embeddings.json
notebooks/factrank/: FactRank.ipynb  citations.json  embeddings.json  references.json  works.json
scripts/: build_and_download.py  build_network.py  download_papers.py  embed_papers.py  get_downloaded_work_ids.py  init_sql_db.py  init_vector_db.py  mongo_collection_stats.py  paper_stats.py
scripts/db/: init_vector_db.py
tests/: test_openalex.py
