[tool.poetry]
name = "buff"
version = "0.1.0"
description = ""
authors = ["Punit Arani <punitsai36@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11 <3.12"
aiolimiter = "^1.1.0"
cohere = "^4.50"
httpx = "^0.27.0"
langchain = "^0.1.0"
motor = "^3.3.0"
networkx = "^3.2.0"
notebook = "^7.1.0"
openai = "^1.10.0"
pinecone-client = "^3.1.0"
pydantic = "^2.6.0"
pymupdf = "^1.23.20"
python-dotenv = "^1.0.0"
streamlit = "^1.30.0"
tenacity = "^8.2.3"
tqdm = "^4.66.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.12.1"}
isort = "^5.12.0"
pre-commit = "^3.4.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
ruff = "^0.0.291"


[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true
multi_line_output = 3
force_grid_wrap = 0
known_first_party = "buff"

[tool.ruff]
target-version = "py311"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
